adguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-external-ingress
  namespace: adguard
  labels:
    app: adguard
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - adguard.dadgar.se
    secretName: letsencrypt-dadgar.se
  rules:
  - host: adguard.dadgar.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard
            port:
              number: 80
